# interview

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh  sample.txt  test.cpp  transmission.cpp  transmission.h
algorithms/virus/: README.md
cloud/azure1/: README.md
cloud/cp_task/: README.md  cp_task.sh  generate.sh
cloud/jupyterhub1/: README.md
cloud/jupyterhub1/config/: config.yaml  network.yaml
cloud/jupyterhub1/diagrams/: architecture_azure.puml  (+1 more)
cloud/kubernetes1/: README.md
cloud/vm_creation/: README.md
conf/: log4j.properties
design/apigateway/: Dockerfile  Other Gateways.md  Readme.md  async_client.py  build.sh  docker-compose.yml  generate_frauddetecter.py  requirements.txt  run.sh  stop.sh  test.sh
iot/rbpi_mosq_thingspeak/: README.md  docker-compose.yml
ml/cifar10/: README.md  cifar.ipynb
mlops/: Dockerfile  README.md  app.py  build.sh  convert.py  docker-compose.yml  iris.ipynb  run.ps1  run.sh  test.sh
mlops/convertapp/: Dockerfile  app.py  convert.py  requirements.txt
mlops/mlapp/: Dockerfile  app.py  requirements.txt
mlops/webapp/: Dockerfile  app.js  index.html  package.json  script.js
programming/codility/: README.md
programming/debug/: README.md  clean.sh  compile.sh  debug2.cpp  original.cpp  solution.cpp  solution1.cpp  solution2.cpp
programming/robot/: README.md  clean.sh  compile.sh  pom.xml
programming/threading/: README.md  clean.sh  compile.sh  tcp_clients.c  tcp_server_threads.c
tdd/: README.md  shopping.py  test_code.py
virus/: WardFactory.cpp  WardFactory.h  transmission.h
(+58 files in other folders)
