cmake_minimum_required(VERSION 2.6)
project(virus)
set(CMAKE_CXX_STANDARD 17)
find_package(log4cxx REQUIRED)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(infect_time main.cpp transmission.cpp WardFactory.cpp)
add_executable(test_infect_time test.cpp transmission.cpp WardFactory.cpp)
target_link_libraries(infect_time log4cxx)
target_link_libraries(test_infect_time log4cxx ${GTEST_LIBRARIES} pthread)